--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,6 @@
 name = "NFFT"
+uuid = "efe261a4-0d2b-5849-be55-fc731d526b0d"
+repo = "https://github.com/tknopp/NFFT.jl.git"
 
 [deps]
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
