--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,6 @@
+authors = ["Tobias Knopp <tobias@knoppweb.de>"]
 name = "NFFT"
+version = "0.2.2"
 uuid = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 repo = "https://github.com/tknopp/NFFT.jl.git"
 
