--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
-# Documentation: http://docs.travis-ci.com/user/languages/julia/
+## Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
 os:
   - linux
+  - osx
 julia:
+  - 0.7
+  - 1.0
   - nightly
 notifications:
-    email: false
-git:
-    depth: 9999999
+  email: false
+branches:
+  only: master
+# uncomment the following lines to allow failures on nightly julia
+# (tests will run but not make your overall status red)
+matrix:
+  allow_failures:
+  - julia: nightly
+  - os: osx
