--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,11 @@
 name = "NFFT"
 uuid = "8eb238ee-c2ea-11e8-3196-999cce9ed216"
 authors = ["Martin Hofmann <m.hofmann@uke.de>"]
-version = "0.1.0"
 
 [deps]
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
