--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ os:
   - osx
 julia:
   - 0.7
-  - 1.0
+  - 1.1
   - nightly
 notifications:
   email: false
@@ -16,3 +16,17 @@ branches:
 matrix:
   allow_failures:
   - julia: nightly
+
+## uncomment following lines to deploy documentation
+jobs:
+   include:
+     - stage: Documentation
+       julia: 1.1
+       os: linux
+       script:
+         - julia --project=docs -e 'using Pkg; Pkg.instantiate(); Pkg.add(PackageSpec(path=pwd()))'
+         - julia --project=docs docs/make.jl
+       after_success: skip
+
+after_success:
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
