--- a/Project.toml
+++ b/Project.toml
@@ -10,11 +10,12 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 
 [compat]
 FFTW = "0.2, 1.0"
 SpecialFunctions = "0.8, 0.10, 1.0"
-julia = "0.7, 1.0"
+julia = "1.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
