--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ FFTW = "0.2, 1.0"
 Graphics = "0.4, 1.0"
 SpecialFunctions = "0.8, 0.10, 1.0"
 julia = "1.3"
+CUDA = "2.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
