--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 CUDA = "1.3.3, 2.3, 3.1"
 FFTW = "0.2, 1"
 Graphics = "0.4, 1.0"
-SpecialFunctions = "0.8, 0.10, 1"
+SpecialFunctions = "0.8, 0.10, 1, 2"
 julia = "1.3"
 
 [extras]
