--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+Printf = "ade2ca70-3891-5945-98fb-dc099432e06a"
 
 [compat]
 CUDA = "1.3.3, 2.3, 3.1"
