--- a/Project.toml
+++ b/Project.toml
@@ -10,18 +10,18 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Graphics = "a2bd30eb-e257-5431-a919-1863eab51364"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
+Printf = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
-Printf = "ade2ca70-3891-5945-98fb-dc099432e06a"
 
 [compat]
 CUDA = "1.3.3, 2.3, 3.1"
 FFTW = "0.2, 1"
 Graphics = "0.4, 1.0"
-SpecialFunctions = "0.8, 0.10, 1"
-julia = "1.6"
 Polyester = "0.5.5"
+SpecialFunctions = "0.8, 0.10, 1, 2"
+julia = "1.6"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
