--- a/Project.toml
+++ b/Project.toml
@@ -11,10 +11,11 @@ Graphics = "a2bd30eb-e257-5431-a919-1863eab51364"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
-Printf = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+ThreadedSparseCSR = "39591389-4884-462a-89e7-9edfce40b6eb"
 
 [compat]
 CUDA = "1.3.3, 2.3, 3.1"
@@ -23,6 +24,7 @@ Graphics = "0.4, 1.0"
 LoopVectorization = "0.12"
 Polyester = "0.5.5"
 SpecialFunctions = "0.8, 0.10, 1, 2"
+ThreadedSparseCSR = "0.1.1"
 julia = "1.6"
 
 [extras]
