--- a/Project.toml
+++ b/Project.toml
@@ -22,7 +22,7 @@ CUDA = "1.3.3, 2.3, 3.1"
 FFTW = "0.2, 1"
 Graphics = "0.4, 1.0"
 LoopVectorization = "0.12"
-Polyester = "0.5.5"
+Polyester = "0.5.5, 0.6"
 SpecialFunctions = "0.8, 0.10, 1, 2"
 ThreadedSparseCSR = "0.1.1"
 julia = "1.6"
