--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,7 @@ authors = ["Tobias Knopp <tobias@knoppweb.de>"]
 version = "0.6.2"
 
 [deps]
-CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+AbstractNFFTs = "7f219486-4aa7-41d6-80a7-e08ef20ceed7"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Graphics = "a2bd30eb-e257-5431-a919-1863eab51364"
@@ -12,23 +12,26 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
-CUDA = "1.3.3, 2.3, 3.1"
+AbstractNFFTs = "0.1"
 DataFrames = "1.3.1"
 FFTW = "0.2, 1"
 Graphics = "0.4, 1.0"
 Polyester = "0.5.5, 0.6"
+Reexport = "1.0"
 SpecialFunctions = "0.8, 0.10, 1, 2"
 julia = "1.6"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+CuNFFT = "a9291f20-7f4c-4d50-b30d-4e07b13252e1"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 NFFT3 = "53104703-03e8-40a5-ab01-812303a44cae"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "BenchmarkTools", "NFFT3", "DataFrames"]
+test = ["Test", "BenchmarkTools", "CuNFFT", "NFFT3", "DataFrames"]
