--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "NFFT"
 uuid = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 authors = ["Tobias Knopp <tobias@knoppweb.de>"]
-version = "0.7.0"
+version = "0.8.0"
 
 [deps]
 AbstractNFFTs = "7f219486-4aa7-41d6-80a7-e08ef20ceed7"
@@ -17,7 +17,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
-AbstractNFFTs = "0.2.3"
+AbstractNFFTs = "0.3.0"
 DataFrames = "1.3.1"
 FFTW = "0.2, 1"
 Graphics = "0.4, 1.0"
@@ -28,10 +28,11 @@ julia = "1.6"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
-#CuNFFT = "a9291f20-7f4c-4d50-b30d-4e07b13252e1"
+CuNFFT = "a9291f20-7f4c-4d50-b30d-4e07b13252e1"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 NFFT3 = "53104703-03e8-40a5-ab01-812303a44cae"
+NFFTTools = "7424e34d-94f7-41d6-98a0-85abaf1b6c91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "BenchmarkTools", "NFFT3", "DataFrames"] # "CuNFFT"
+test = ["Test", "BenchmarkTools", "CuNFFT", "NFFT3", "NFFTTools", "DataFrames"] 
