--- a/Project.toml
+++ b/Project.toml
@@ -7,9 +7,9 @@ version = "0.8.0"
 AbstractNFFTs = "7f219486-4aa7-41d6-80a7-e08ef20ceed7"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+FLoops = "cc61a311-1640-44b5-9fba-1b764f453329"
 Graphics = "a2bd30eb-e257-5431-a919-1863eab51364"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
@@ -20,8 +20,8 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 AbstractNFFTs = "0.3.0"
 DataFrames = "1.3.1"
 FFTW = "0.2, 1"
+FLoops = "0.2"
 Graphics = "0.4, 1.0"
-Polyester = "0.5.5, 0.6"
 Reexport = "1.0"
 SpecialFunctions = "0.8, 0.10, 1, 2"
 julia = "1.6"
