--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ Graphics = "0.4, 1.0"
 Reexport = "1.0"
 SpecialFunctions = "0.8, 0.10, 1, 2"
 julia = "1.6"
+FINUFFT = "3.0.1"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
