--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+#StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 AbstractNFFTs = "0.6"
@@ -26,6 +27,7 @@ Reexport = "1.0"
 SpecialFunctions = "0.8, 0.10, 1, 2"
 julia = "1.6"
 FINUFFT = "3.0.1"
+#StaticArrays = "1.4"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
