--- a/Project.toml
+++ b/Project.toml
@@ -15,10 +15,12 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+BasicInterpolators = "26cce99e-4866-4b6d-ab74-862489e035e0"
 #StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 AbstractNFFTs = "0.7"
+BasicInterpolators = "0.6.5"
 DataFrames = "1.3.1"
 FFTW = "0.2, 1"
 FLoops = "0.2"
