--- a/CuNFFT/Project.toml
+++ b/CuNFFT/Project.toml
@@ -14,7 +14,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 [compat]
 julia = "1.6"
 AbstractFFTs = "1.0"
-AbstractNFFTs = "0.6, 0.7"
+AbstractNFFTs = "0.6, 0.7, 0.8"
 CUDA = "1.3.3, 2.3, 3.1"
-NFFT = "0.11, 0.12"
+NFFT = "0.11, 0.12, 0.13"
 Reexport = "1.0"
