automatically set num FFTW threads

--- a/Project.toml
+++ b/Project.toml
@@ -22,7 +22,7 @@ BasicInterpolators = "26cce99e-4866-4b6d-ab74-862489e035e0"
 AbstractNFFTs = "0.8"
 BasicInterpolators = "0.6.5"
 DataFrames = "1.3.1"
-FFTW = "0.2, 1"
+FFTW = "1.5"
 FLoops = "0.2"
 Graphics = "0.4, 1.0"
 Reexport = "1.0"
