--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "NFFT"
 uuid = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 authors = ["Tobias Knopp <tobias@knoppweb.de>"]
-version = "0.13.1"
+version = "0.13.2"
 
 [deps]
 AbstractNFFTs = "7f219486-4aa7-41d6-80a7-e08ef20ceed7"
@@ -21,7 +21,7 @@ SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
 [compat]
 AbstractNFFTs = "0.8"
 BasicInterpolators = "0.6.5"
-DataFrames = "1.3.1"
+DataFrames = "1.3.1, 1.4.1"
 FFTW = "1.5"
 FLoops = "0.2"
 Reexport = "1.0"
