--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
-SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
@@ -25,7 +25,7 @@ FFTW = "1.5"
 FINUFFT = "3.0.1"
 FLoops = "0.2"
 Reexport = "1.0"
-SnoopPrecompile = "1"
+PrecompileTools = "1"
 SpecialFunctions = "0.8, 0.10, 1, 2"
 julia = "1.6"
 #StaticArrays = "1.4"
