--- a/CuNFFT/Project.toml
+++ b/CuNFFT/Project.toml
@@ -15,6 +15,6 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 julia = "1.6"
 AbstractFFTs = "1.0"
 AbstractNFFTs = "0.8"
-CUDA = "1.3.3, 2.3, 3.1, 4"
+CUDA = "1.3.3, 2.3, 3.1, 4, 5"
 NFFT = "0.13"
 Reexport = "1.0"
