--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ FFTW = "1.5"
 FINUFFT = "3.0.1"
 FLoops = "0.2"
 GPUArrays = "8, 9, 10"
+JLArrays = "0.1.2"
 Reexport = "1.0"
 PrecompileTools = "1"
 SpecialFunctions = "0.8, 0.10, 1, 2"
@@ -35,7 +36,6 @@ Ducc0 = "0.1"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
-CuNFFT = "a9291f20-7f4c-4d50-b30d-4e07b13252e1"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FINUFFT = "d8beea63-0952-562e-9c6a-8e8ef7364055"
 NFFT3 = "53104703-03e8-40a5-ab01-812303a44cae"
@@ -43,14 +43,15 @@ NFFTTools = "7424e34d-94f7-41d6-98a0-85abaf1b6c91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Ducc0 = "47ec601d-2729-4ac9-bed9-2b3ab5fca9ff"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+JLArrays = "27aeb0d3-9eb9-45fb-866b-73c2ecf80fcb"
 
 [weakdeps]
 Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 GPUArrays = "0c68f7d7-f131-5f86-a1c3-88cf8149b2d7"
 
 [targets]
-test = ["Test", "BenchmarkTools", "FINUFFT", "NFFT3", "CuNFFT", "Zygote",
-        "NFFTTools", "DataFrames", "Ducc0"]  # "NFFTTools"  "CuNFFT"
+test = ["Test", "JLArrays", "BenchmarkTools", "FINUFFT", "NFFT3", "Zygote",
+        "NFFTTools", "DataFrames", "Ducc0"]  # "NFFTTools"
 
 [extensions]
 NFFTGPUArraysExt = ["Adapt", "GPUArrays"]
