--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "NFFT"
 uuid = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 authors = ["Tobias Knopp <tobias@knoppweb.de>"]
-version = "0.13.5"
+version = "0.13.6"
 
 [deps]
 AbstractNFFTs = "7f219486-4aa7-41d6-80a7-e08ef20ceed7"
@@ -25,8 +25,8 @@ DataFrames = "1.3.1, 1.4.1"
 FFTW = "1.5"
 FINUFFT = "3.0.1"
 FLoops = "0.2"
-GPUArrays = "8, 9, 10"
-JLArrays = "0.1.2"
+GPUArrays = "11"
+JLArrays = "2"
 Reexport = "1.0"
 PrecompileTools = "1"
 SpecialFunctions = "0.8, 0.10, 1, 2"
