--- a/NFFTTools/Project.toml
+++ b/NFFTTools/Project.toml
@@ -12,5 +12,5 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 [compat]
 julia = "1.6"
 AbstractFFTs = "1.0"
-AbstractNFFTs = "0.6, 0.7, 0.8"
+AbstractNFFTs = "0.6, 0.7, 0.8, 0.9"
 FFTW = "1"
