--- a/Project.toml
+++ b/Project.toml
@@ -8,8 +8,8 @@ AbstractNFFTs = "7f219486-4aa7-41d6-80a7-e08ef20ceed7"
 BasicInterpolators = "26cce99e-4866-4b6d-ab74-862489e035e0"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
-FLoops = "cc61a311-1640-44b5-9fba-1b764f453329"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OhMyThreads = "67456a42-1dca-4109-a031-0a68de7e3ad5"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
@@ -24,10 +24,10 @@ BasicInterpolators = "0.6.5, 0.7"
 DataFrames = "1.3.1, 1.4.1"
 FFTW = "1.5"
 FINUFFT = "3.0.1"
-FLoops = "0.2"
 GPUArrays = "11"
 JLArrays = "0.2"
 Reexport = "1.0"
+OhMyThreads = "0.8"
 PrecompileTools = "1"
 SpecialFunctions = "0.8, 0.10, 1, 2"
 julia = "1.10"
